# x402-secure

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-usage.md  Dockerfile  Dockerfile.production  LICENSE  NOTICE  README.md  docker-compose.test.yml  docker-compose.yml  env.example  env.example.full  pyproject.toml  pytest.ini  requirements.txt  run_facilitator_proxy.py
.github/workflows/: test.yml
docs/: BUYER_INTEGRATION.md  DEVELOPMENT.md  QUICKSTART.md  README.md  SELLER_INTEGRATION.md
docs/guides/: AGENT_TRACE_GUIDE.md  EIP8004_MIGRATION.md  RUN_COMPLETE_DEMO.md  VIEW_TRACE_GUIDE.md
docs/observability/: otel-collector-minimal.md  otel-collector.yaml
docs/progress/: DOCS_UPDATE_REPORT.md  implementation-progress.md
docs/specs/: COMPLETE_AGENT_TRACE.md  TRACE_PAYLOAD_FORMAT.md  payment-trace-and-evidence-spec.md
protocol-spec/: openapi.yaml
proxy/: README.md  pyproject.toml
proxy/src/x402_proxy/: __init__.py  headers.py  internal_facilitator.py  risk_routes.py  routes.py  vi_receipt_store.py
scripts/: check_balances.py  create_wallets.py  run_tests.py  test_ap2_flow.py  test_docker.sh  view_trace.py
test-vectors/: payment_requirements_hash.json
tests/: Dockerfile.mock-facilitator  Dockerfile.test-runner  conftest.py  mock_facilitator.py  pytest-docker.ini  test_client_sdk.py  test_core_flows.py  test_integration_docker.py  test_internal_facilitator.py  test_payment_requirements_hash_vectors.py  test_public_vi_gateway.py  test_xrpl_live_smoke.py
