[project]
name = "x402-proxy"
version = "1.0.0"
description = "x402 facilitator proxy with AP2 validation (internal use, not published to PyPI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "t54 labs", email = "dev@t54.ai" }]
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "x402>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
eip712 = [
    "eth-account>=0.10.0",
    "eth-utils>=2.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x402_proxy"]

